--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hola Mundo</h1>
     <p>Esto es una prueba de pull request para las chicas de la clase</p>
+    <p>Con las chicas de Lab nunca faltan las risas! :D</p>
   </body>
 </html>
